--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -194,8 +194,9 @@ div.image-item-container{
     width:220px;
     height: 220px;
     overflow: hidden;
+    background-image: url(http://cdn.athletez.com/resources/img/green_loading.gif);
 }
-div.image-item-container img{
+div.image-item-container > img{
     position: absolute;
     min-width: 220px;
     min-height: 220px;
@@ -773,7 +774,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
    }
 .container_add_game .field-message{
 	color:#77011C;
-	font-size: :8px;
+	font-size: 8px;
 	font-style: italic;
 	font-weight: normal;
 	background-color: none;	
@@ -790,8 +791,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
  	 padding: 0 2px !important;
  	
  }
-.container_add_game .ui-autocomplete li.ui-menu-item{
+.container_add_game .ui-autocomplete li.ui-menu-item {
 	font-size: 14px;
+}
 .score-box a {
 	width: 100%;
 	height: 100%;
