--- a/html_build/pages/team/templates/layout.html
+++ b/html_build/pages/team/templates/layout.html
@@ -29,7 +29,7 @@
 	<div class="green-left-heading">FANS</div>
 	<div id="fans-div" class="clearfix clear">&nbsp;</div>
 
-
+	<div id="roster-wrap" class="clearfix clear"></div>
 
 <div id="votes-area-h"></div>
 <!--div class="row-fluid">
