--- a/html_build/usercontrols/location/templates/layout.html
+++ b/html_build/usercontrols/location/templates/layout.html
@@ -3,5 +3,5 @@
 	<span class="address-error hide address-error-status-h"></span>
 	<a href="javascript: void(0);" class="common-btn common-btn-validation verify-address-h">Verify Address</a>
 	<a href="javascript: void(0);" class="common-btn common-btn-direction link-disabled set-address-h">Set Address</a>
-	 <div id="map-canvas"></div>
+	 <div id="map-canvas" style="width: 90%; height: 300px; margin-top: 40px;"></div>
 </div>
