--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -37,6 +37,12 @@
     height: 520px;
     overflow-y: auto;
 }
+.photo-player-right-area .right-area-header{
+    height:40px;
+    background-color: #989899;
+    width:100%;
+    margin-bottom:20px;
+}
 .comment-area, .photo-frame-model #comment_div {
     
 }
@@ -57,19 +63,11 @@
     background: #CCCCCC;
     display: block;
 }
-.player-move-options {
-    
-    margin-top: 28%;
-    font-size: 18px;
-}
 .image-bg {
     text-align: center;
     background: #333;
     height:100%;
     position: relative;
-}
-.photo-player-next {
-    margin-right: 20px;
 }
 div.image-controls{
     position: absolute;
@@ -77,18 +75,32 @@ div.image-controls{
     height: 100%;
     z-index: 1055;
 }
-div.right-arrow{
-    width:50px;
-    height: 50px;
-    background: url('http://cdn.athletez.com/resources/img/right_arrow.png');
+div.right-arrow-container, div.left-arrow-container{
+    height:100%;
+    position: relative;
+    width:20%;
+    vertical-align: middle;
+    text-align: center;
 }
-div.left-arrow{
-    width:50px;
-    height: 50px;
-    background: url('http://cdn.athletez.com/resources/img/left_arrow.png')
+div.right-arrow-container{
+    right:0px;
 }
-.photo-player-back {
-    margin-left: 20px;
+div.left-arrow-container{
+    left:0px;
+}
+div.right-arrow-container > img, div.left-arrow-container > img{
+    display: block;
+    position: relative;
+    top:40%;
+    margin-top:-25px;
+}
+div.left-arrow-container > img{
+    margin-left:50px;
+    float: left;
+}
+div.right-arrow-container > img{
+    margin-right:50px;
+    float: right;
 }
 .images-list {
     
@@ -99,7 +111,7 @@ div.left-arrow{
     z-index: 1056;
     max-width: 100%;
     margin-top: 5px;
-    max-height: 150px;
+    height: 150px;
     overflow-x: scroll;
     overflow-y: hidden;
     position: absolute;
@@ -108,17 +120,32 @@ div.left-arrow{
 .thumbs-inner {
     width: 10000px;
 }
-.images-list li {
+.thumbs-inner .images-list ul{
+    height: 150px;
+}
+.thumbs-inner .images-list li {
+    position: relative;
+    margin: 1px;;
     float: left;
-    display: inline-block;
+    display: block;
     margin-right: 5px;
     opacity: 0.5;
+    width: 110px;
+    height: 110px;
+    overflow:hidden;
 }
-.images-list li img {
-    width: 90px;
+.thumbs-inner .images-list li:hover {
+    opacity: .9;
 }
-.images-list li.selected-photo-thumb {
+.thumbs-inner .images-list li img {
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
+}
+.thumbs-inner .images-list li.selected-photo-thumb {
     opacity: 1;
+    border:1px solid #FFF;
+    margin: 0;
 }
 .image-actions {
     position: absolute;
@@ -138,6 +165,13 @@ div.left-arrow{
 }
 .photo-player-main-image {
     min-height: 380px;
+    max-height: 100%;
+}
+.loading_image{
+    -webkit-transition : all .2s ease-out;
+    -moz-transition : all .2s ease-out;
+    -o-transition : all .2s ease-out;
+    transition : all .2s ease-out;
     position: relative;
 }
 .tags-name {
