--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -1,10 +1,10 @@
 <ul class="image-list">
 </ul>
-
+{{#target}}
 <div class="image-drop-area-outer">
 	<div class="image-drop-area" id="image-place-holder">
 		Drop Image Here
 	</div>
 </div>
-
+{{/target}}
 <div class="clear"><a href="javascript: void(0);" class="see-more-h">See more</a></div>
