--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -1,6 +1,6 @@
 <ul class="image-list">
 </ul>
-<!--{{#target}}
+{{#target}}
 <div class="image-drop-area-outer">
 	<div class="image-drop-area" id="image-place-holder">
 		<div class="drop-text">DROP PHOTOS HERE</div>
@@ -8,5 +8,5 @@
 		
 	</div>
 </div>
-{{/target}}-->
+{{/target}}
 <div class="clear"><a href="javascript: void(0);" class="see-more-h">See more</a></div>
