--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -11,8 +11,8 @@
     <link rel="apple-touch-icon" href="{{base_url}}images/apple-touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="{{base_url}}images/apple-touch-icon-ipad.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="{{base_url}}images/apple-touch-icon-iphone4.png" />
-    <link rel="stylesheet" href="{{base_url}}/css/normalize.css">
-	<link rel="stylesheet" href="{{base_url}}/css/fonts.css">
+    <link rel="stylesheet" href="{{base_url}}css/normalize.css">
+	<link rel="stylesheet" href="{{base_url}}css/fonts.css">
 	<script>var base_url='{{base_url}}',testpath=false,cdn='{{cdn}}',s3='{{s3}}';</script>
 	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
