--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -60,10 +60,10 @@
 }
 
 .modal {
-    left: 10%;
+    left: 5%;
     z-index: 1050;
-    width: 80%;
-    margin-left: 0px;
+    width: 90%;
+    margin-left: -25px;
 }
 
 .modal * {
@@ -93,15 +93,15 @@
     display:inline-block;
 }
 #main-content-img {
-    width: 100%;
+    width: 92%;
     float: left;
     height: 35%;
 }
 
 #image-tagging{
-    width: 100%;
+    width: 92%;
     float: left;
-    text-align: none;
+    text-align: left;
 /*    height: 50%;
     background-color: #f5f5f5;
     padding: 0%; */
@@ -113,7 +113,7 @@
 }
 .side-panel{
     width:25%;
-    height:100%;
+    height:92%;
     display:inline-block;
 }
 
@@ -122,8 +122,9 @@
 }
 
 #imgUploadModal {
-    max-height: 710px;
-    height: 500px;
+    top:5% !important;
+    max-height: 90%;
+    height: 90%;
     overflow-y: auto;
 }
 #Loginview {
