--- a/html_build/pages/imageup/imageup.css
+++ b/html_build/pages/imageup/imageup.css
@@ -52,10 +52,10 @@
   
 }
 .modal {
-    left: 10%;
+    left: 5%;
     z-index: 1050;
-    width: 80%;
-    margin-left: 0px;
+    width: 90%;
+    margin-left: -25px;
 }
 .modal * {
     z-index: 1051;
@@ -78,29 +78,30 @@
     display:inline-block;
 }
 #main-content-img {
-    width: 100%;
+    width: 92%;
     float: left;
     height: 35%;
 }
 #image-tagging{
-    width: 100%;
+    width: 92%;
     float: left;
-    text-align: none;
+    text-align: left;
 }
 .main-body{
     width:70%;
 }
 .side-panel{
     width:25%;
-    height:100%;
+    height:92%;
     display:inline-block;
 }
 #imageuploadForm input[type="file"] {
     width: 90%;
 }
 #imgUploadModal {
-    max-height: 710px;
-    height: 500px;
+    top:5% !important;
+    max-height: 90%;
+    height: 90%;
     overflow-y: auto;
 }
 #Loginview {
