--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -1098,11 +1098,11 @@ margin-top:10px;
 }
 .left-arrow-page {
 	left: 0;
-	margin-top: 30%;
+	margin-top: -30%;
 }
 .right-arrow-page {
 	right: 0;
-	margin-top: 30%;
+	margin-top: -30%;
 }
 .m_top_50{margin-top:50px;
 	}
@@ -1226,4 +1226,17 @@ margin-top:10px;
 	display: inline-block;
     padding:4px;
     text-align: center;
+}
+.region-loader {
+	background: url(../images/loader/gray_loading.gif) repeat;
+	width: 100%;
+	height: 100%;
+	min-height: 100px;
+	margin: 0 auto;
+}
+.button.close {
+	color: #000;
+}
+#search-result {
+	display: inline-block;
 }
