--- a/html_build/pages/login/templates/layout.html
+++ b/html_build/pages/login/templates/layout.html
@@ -4,7 +4,7 @@
 		font-weight: bold;
 	}
 </style>
-<div id="Loginview" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!--div id="Loginview" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div id="">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -12,4 +12,4 @@
 		</div>
 		<div id="main-content-reg"></div>
 	</div>	
-</div>
+</div-->
