--- a/html_build/pages/signup/css/signupstyle.css
+++ b/html_build/pages/signup/css/signupstyle.css
@@ -280,7 +280,10 @@ border: 1px solid #CCC;
 	padding: 9px;
 }
 .loguser p {
-	margin-left: 15px;
+	 font-size: 13px;
+    font-weight: bold;
+    margin-left: 15px;
+    margin-top: -8px;
 }
 #regpanemain {
    	position: relative!important;
@@ -292,8 +295,14 @@ border: 1px solid #CCC;
 	color:blue;
 }
 .addsub{
-	padding-top: 9px;
+	padding-top: 15px;
 }
 .loginUser ,.addsub{
 	margin-left: 15px;
+}
+.errormsg {
+    color: #FF0000;
+    font-size: 12px!important;
+    font-weight: bold!important;
+    padding-left: 17px!important;
 }
