--- a/html_build/packages/site/templates/comment-form.html
+++ b/html_build/packages/site/templates/comment-form.html
@@ -1,4 +1,5 @@
 <a href="javascript: void(0);" class="add-comment-h">Comment</a>
+{{#payload}}
 
 <form class="add-comment-form-h hide" method="post" action="#">
 <div class="row-fluid">
@@ -8,3 +9,4 @@
     <br/><input type="button" id="comment-submit" value="Submit"/>
 </div>
 </form>
+{{/payload}}
