--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -24,4 +24,29 @@
 
 ga('create', 'UA-45111767-1',{cookieDomain:'none'});
 ga('send', 'pageview');
+
+
+// Avoid 'console' errors in browsers that lack a console.
+(function() {
+    var method;
+    var noop = function () {};
+    var methods = [
+        'assert', 'clear', 'count', 'debug', 'dir', 'dirxml', 'error',
+        'exception', 'group', 'groupCollapsed', 'groupEnd', 'info', 'log',
+        'markTimeline', 'profile', 'profileEnd', 'table', 'time', 'timeEnd',
+        'timeStamp', 'trace', 'warn'
+    ];
+    var length = methods.length;
+    var console = (window.console = window.console || {});
+
+    while (length--) {
+        method = methods[length];
+
+        // Only stub undefined methods.
+        if (!console[method]) {
+            console[method] = noop;
+        }
+    }
+}());
+
 </script><script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script></head><body></body></html>
