--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -19,8 +19,10 @@
 			{{/show_edit}}
 		</div>
 		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
-			<h6>{{_label}}</h6>
-			<span>{{& _sublabel}}</span>
+			{{#_label}}<h6>{{_label}}</h6>{{/_label}}
+			{{#_sublabel}}
+				<span>{{label}}</span>
+			{{/_sublabel}}
 		</div>
 	</div>
 </a>
