--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -488,7 +488,7 @@ ul.ui-autocomplete {
     z-index: 1060;
 }
 .ui-autocomplete-loading{
-    background-image: url(http://athletez.s3.amazonaws.com/resources/img/gray_loading.gif) !important;
+    background-image: url(http://cdn.athletez.com/resources/img/gray_loading.gif) !important;
     background-repeat: repeat;
 }
 .ui-autocomplete li.ui-menu-item {
@@ -835,6 +835,21 @@ a.add-game-h{
     height: 90%;
 	width: 96%;
     padding: 0;
+}
+.common-modal .modal-body {
+	width: 100% !important;
+}
+.common-modal .modal-body .well-large {
+	width: 60%;
+	float: left;
+}
+.popup-action-button {
+	width: 30%;
+}
+.popup-action-button button {
+	position: fixed;
+	right: 100px;
+	top: 514px;
 }
 div.game-info{
     line-height: 25px;
@@ -1231,7 +1246,7 @@ margin-top:10px;
     text-align: center;
 }
 .region-loader {
-	background: url(../images/loader/gray_loading.gif) repeat;
+	background: url(http://cdn.athletez.com/resources/img/white_loading.gif) repeat;
 	width: 100%;
 	height: 100%;
 	min-height: 100px;
