--- a/html_build/packages/media/templates/image-item.html
+++ b/html_build/packages/media/templates/image-item.html
@@ -21,7 +21,12 @@
 		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
 			{{#_label}}<h6>{{_label}}</h6>{{/_label}}
 			{{#_sublabel}}
-				<span>{{_sublabel}}</span>
+				{{#label}}
+					<span>{{label}}</span>
+				{{/label}}
+				{{^label}}
+					<span>{{_sublabel}}</span>
+				{{/label}}
 			{{/_sublabel}}
 		</div>
 	</div>
