--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -19,6 +19,7 @@
 		<p>
 			{{game_location}}
 		</p>
+			<a href="javascript: void(0);" class="add-to-event common-btn common-default-sky-dark pull-right" title="Add me to this Event">Add me to this Event</a>
 		<a href="javascript: void(0);" class="common-btn game-edit-btn-h common-default-sky-dark pull-right">Edit Game</a>
 	</div>
 
