--- a/html/pages/profilesetting/templates/level.html
+++ b/html/pages/profilesetting/templates/level.html
@@ -29,7 +29,9 @@
 							<span class="single-season">
 								<input type="checkbox" class="chkSeasons chkSeasons-{{season_id}}-{{year}}" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
 								<label>&nbsp;{{season_name}} </label>
-								<a href="javascript:void(0)" class="btnOpenPositions displayNone" disabled="disabled" >Positions</a>
+								<!--<a href="javascript:void(0)" class="btnOpenPositions displayNone" disabled="disabled" >Positions main</a>-->
+								<a href="javascript:void(0)" class="btnOpenPositions displayNone" >Positions</a>
+
 							</span>
 						{{/seasons}}
 					</div>
