--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -4,6 +4,7 @@
 			<li><a href="javascript: void(0);" class="photo-player-tag-photo-h" title="tag photo">Tag Photo</a></li>
 			<li><a href="javascript: void(0);" class="photo-player-tag-myself-h" title="tag my self">Tag Myself</a></li>
 			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
+			<li><a href="javascript: void(0);" class="share-on-facebook-h" title="share on facebook">Share on facebook</a></li>			
 		</ul>
 
 		<div class="left-arrow-container left-arrow photo-player-back pull-left">
