--- a/html/pages/profilesetting/templates/basic_info_header.html
+++ b/html/pages/profilesetting/templates/basic_info_header.html
@@ -4,13 +4,25 @@
 	<a href="javascript:void(0);" id="change_user_pic">Change User Picture</a>
 </div>
 <div class="span5" id="user_profile_data">
-	<h2 id="user_name">{{first_name}} {{last_name}}</h2>
+	<!--<h2 id="user_name">{{first_name}} {{last_name}}</h2>
 	<p id="user_height">
 		{{#height_in}} {{height_in}} INCHES{{/height_in}}
 	</p>
 	<p id="user_weight">
 		{{#weight_lb}}{{weight_lb}} LBS{{/weight_lb}}
 	</p>
-	<div class="resume_button" id="edit_profile_info">Edit Basic User Info</div>
+	<div class="resume_button" id="edit_profile_info">Edit Basic User Info</div>-->
+	<div id="edit_profile_info_section">
+		<div><span>Name: </span><input type="text" id="txt_user_name" model-property="name" value="{{name}}" /></div>
+		<div><span>Height (in):</span><input type="text" id="txt_user_height" model-property="height_in" value="{{height_in}}" /></div>
+		<div><span>Weight (lbs)</span><input type="text" id="txt_user_weight" model-property="weight_lb" value="{{weight_lb}}" /></div>
+		<div style="font-size: .8em; font-weight: bolder;">Change Password</div>
+		<!--<div><span>Current</span><input type="password" id="txt_current_password" model-property="current_password"  placeholder="Current Password" /></div>-->
+
+		<div><span>New</span><input type="password" id="txt_new_password" model-property="password" placeholder="New Password" /></div>
+		<div><span>Again</span><input type="password" id="txt_re_new_password" model-property="re_password" placeholder="New Password Again" /></div>
+		<a href="javascript:void(0);" class="resume_button" id="save_user_data">Save</a>
+	</div>
 </div>
+
 {{/payload}}
